--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,14 @@
 FROM ubuntu:22.04
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-build-essential \
-flex \
-bison \
-gdb \
-cmake \
-git \
-make \
-&& rm -rf /var/lib/apt/lists/*
+    build-essential \
+    flex \
+    bison \
+    gdb \
+    cmake \
+    git \
+    make \
+    ninja-build \
+ && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace
