Replaced problemfall with a directory for Testat 4.

--- a/testat4/Makefile
+++ b/testat4/Makefile
@@ -1,15 +1,17 @@
 BISON = bison
 FLEX  = flex
 CXX   = g++
-CXXFLAGS = -std=c++17
+CXXFLAGS = -std=c++17 -O2
 
-PARSER_Y = pl0.y
-SCANNER_L = pl0-scanner.l
-MAIN_CPP = pl-0.cpp
+PARSER_Y   = pl0.y
+SCANNER_L  = pl0-scanner.l
+MAIN_CPP   = pl0-studi.cpp
+AST_BUILDER_CPP = ast_builder.cpp
 
 PARSER_C = y.tab.c
 PARSER_H = y.tab.h
 SCANNER_C = lex.yy.c
+
 BIN = pl0_parser
 
 all: $(BIN)
@@ -23,8 +25,8 @@ $(SCANNER_C): $(SCANNER_L) $(PARSER_H)
 	$(FLEX) -o $(SCANNER_C) $(SCANNER_L)
 
 # Build executable
-$(BIN): $(PARSER_C) $(SCANNER_C) $(MAIN_CPP)
-	$(CXX) $(CXXFLAGS) $(MAIN_CPP) -o $(BIN)
+$(BIN): $(PARSER_C) $(SCANNER_C) $(MAIN_CPP) $(AST_BUILDER_CPP)
+	$(CXX) $(CXXFLAGS) $(MAIN_CPP) $(AST_BUILDER_CPP) -o $(BIN)
 
 # Clean
 clean:
